--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,3 +62,28 @@ header {
   footer {
     padding:2rem;
   }
+
+
+
+  @media (max-width: 575px) {
+    .section {
+        padding: 1rem;
+    }
+    header {
+        padding: 1rem;
+    }
+    #hero-section{
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+}
+
+
+@media only screen and (min-width: 800px) {
+    .section {
+        padding: 1rem;
+    }
+    header {
+        padding: 1rem;
+    }
+}
